fix compile and test run configuration