@@ -75,7 +75,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<inherited>true</inherited>
+					<version>3.8.1</version>
 					<configuration>
 						<source>${javac.target}</source>
 						<target>${javac.target}</target>
@@ -190,7 +190,46 @@
 						<configuration>
 							<excludes>
 								<exclude>**/java11/*Test.java</exclude>
+								<exclude>jdk14/**</exclude>
 							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<!-- Exclude any tests that require JDK 14+ from test run-->
+		<profile>
+			<id>jdk11ge</id>
+			<activation>
+				<jdk>[11,14)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<excludes>
+								<exclude>jdk14/**</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<!-- Run all tests with JDK 14+ if available -->
+		<profile>
+			<id>jdk14ge</id>
+			<activation>
+				<jdk>[14,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+								<argLine>--enable-preview</argLine>
 						</configuration>
 					</plugin>
 				</plugins>
